Se creó con Colab

--- a/PROGRAMACIÓN CONCURRENTE/Suma n primeros naturales.ipynb
+++ b/PROGRAMACIÓN CONCURRENTE/Suma n primeros naturales.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPePYHewf8GtGS/m7D+iY2P",
+      "authorship_tag": "ABX9TyOkXYc8ECQ7hf06LsvHcxTt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/TaoIzzo/UDLAP/blob/main/Suma%20n%20primeros%20naturales.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/TaoIzzo/UDLAP/blob/main/PROGRAMACI%C3%93N%20CONCURRENTE/Suma%20n%20primeros%20naturales.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -59,12 +59,12 @@
         "      suma +=i\n",
         "      end = time.time()\n",
         "      tiempo1.append(end-start)\n",
-        "  return print(f\"La suma de los primoeris {n} numero es {suma}, y su media de ejecucion es {np.median(tiempo1)}\")"
+        "  return print(f\"La suma de los primoeris {n} numero es {suma}, y su media de ejecucion es {np.median(tiempo1)} mientras que su promedio es {np.mean(tiempo1)}\")"
       ],
       "metadata": {
         "id": "V2HqYIcP3mPA"
       },
-      "execution_count": 40,
+      "execution_count": 50,
       "outputs": []
     },
     {
@@ -84,12 +84,12 @@
         "  suma = n * (n+1) / 2\n",
         "  end = time.time()\n",
         "  tiempo2 = (end-start)\n",
-        "  return print(f\"La suma de los primoeris {n} numero es {suma}, y su media de ejecucion es {tiempo2}\")"
+        "  return print(f\"La suma de los primoeris {n} numero es {suma}, y su media de ejecucion como promedio es {tiempo2}\")"
       ],
       "metadata": {
         "id": "H9ybZHNZ5j0A"
       },
-      "execution_count": 46,
+      "execution_count": 52,
       "outputs": []
     },
     {
@@ -111,15 +111,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rvMnn_lS6mlq",
-        "outputId": "87ad5c15-71ce-4906-bd2a-33055c0db983"
+        "outputId": "1fe1c838-eb5d-42a8-c5de-8fc842a6ad09"
       },
-      "execution_count": 48,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "La suma de los primoeris 100 numero es 5050, y su media de ejecucion es 2.586841583251953e-05\n"
+            "La suma de los primoeris 100 numero es 5050, y su media de ejecucion es 2.8014183044433594e-05 mientras que su promedio es 2.736806869506836e-05\n"
           ]
         }
       ]
@@ -134,15 +134,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NjzJsvMM6q7y",
-        "outputId": "12201676-5f55-422c-8f7a-47e8938d1aee"
+        "outputId": "aa470c02-19dd-4088-c982-f61b72116618"
       },
-      "execution_count": 49,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "La suma de los primoeris 100 numero es 5050.0, y su media de ejecucion es 1.1920928955078125e-06\n"
+            "La suma de los primoeris 100 numero es 5050.0, y su media de ejecucion como promedio es 9.5367431640625e-07\n"
           ]
         }
       ]
